# mcp-server-template

./: .dockerignore  .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ca-reference-db-mcp-server-AutoDeployTrigger-461f9089-63a6-4820-9765-a7b98d79889b.yml
migrations/: 001_create_data_table.sql  002_insert_some_data.sql  README.md
src/: auth.py  config.py  db.py  llm.py  query.py  server.py  tools.py
